--- a/monorepo/packages/theme-chalk/src/mixins/function.scss
+++ b/monorepo/packages/theme-chalk/src/mixins/function.scss
@@ -46,3 +46,21 @@
 @function hitAllSpecialNestRule($selector) {
     @return containsModifier($selector) or containWhenFlag($selector) or containPseudoClass($selector)
 }
+
+@function joinVarName($list){
+    $name:'--'+config.$namespace;
+    @each $item in $list {
+         @if $item != '' {
+             $name:$name + '-' + $item
+         }
+    }
+    @return $name
+}
+
+@function getCssVarName($args...){
+    @return joinVarName($args)
+}
+
+@function getCssVar($args...) {
+    @return var(#{joinVarName($args)});
+}
